--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 class="title">Dr. Norman Borlaug</h1>
         <p>The man who saved a billion lives</p>
         <div class="img-div">
-            <img src="Norman-Borlaug.jpeg" alt="Norman-Borlaug">
+            <img id="image" src="norman-borlaug.jpeg" alt="Norman-Borlaug">
             <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
         </div>
         <div id="tribute-info">
@@ -32,17 +32,14 @@
                 <li><b>1984</b> - becomes a distinguished professor at Texas A&M University</li>
                 <li><b>1983</b> - helps seven African countries dramatically increase their maize and sorghum yields</li>
                 <li><b>2009</b> - dies at the age of 95.
-                 <li><b>2005</b> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
-                 <br>
-                 <li><b>2009</b> - dies at the age of 95.
+                <li><b>2005</b> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
+                <li><b>2009</b> - dies at the age of 95.
                    "Borlaug's life and achievement are testimony</li>
-                 <i>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect,   persistence and scientific 
+                <i>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect,   persistence and scientific 
                     vision can make to human peace and progress."</i>
-                 <br>
-                     <br>
-                     <i>-- Indian Prime Minister Manmohan Singh</i>
-                     <br>
-                     <h4>If you have time, you should read more about this incredible human being on his<a id="tribute-link" target="_blank"href="https://en.wikipedia.org/wiki/Norman_Borlaug"> Wikipedia entry.<h4></h4>
+                 
+                <i>-- Indian Prime Minister Manmohan Singh</i>
+                <h4>If you have time, you should read more about this incredible human being on his<a id="tribute-link" target="_blank"href="https://en.wikipedia.org/wiki/Norman_Borlaug"> Wikipedia entry.<h4></h4>
             </ul>
         </div>
     </div>
