--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main">
+    <main class="main">
         <h1 class="title">Dr. Norman Borlaug</h1>
         <p>The man who saved a billion lives</p>
-        <div class="img-div">
+        <figure class="img-div">
             <img id="image" src="norman-borlaug.jpeg" alt="Norman-Borlaug">
             <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
-        </div>
+        </figure>
         <div id="tribute-info">
             <h2>Here's a time line of Dr. Borlaug's life:</h2>
             <ul>
@@ -42,6 +42,6 @@
                 <h4>If you have time, you should read more about this incredible human being on his<a id="tribute-link" target="_blank"href="https://en.wikipedia.org/wiki/Norman_Borlaug"> Wikipedia entry.<h4></h4>
             </ul>
         </div>
-    </div>
+    </main>
 </body>
 </html>
