--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 class="title">Dr. Norman Borlaug</h1>
         <p>The man who saved a billion lives</p>
         <figure class="img-div">
-            <img id="image" src="norman-borlaug.jpeg" alt="Norman-Borlaug">
+            <img id="image" src="Norman-borlaug.jpeg" alt="Norman-Borlaug">
             <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
         </figure>
         <div id="tribute-info">
