--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <img id="image" src="Norman-borlaug.jpeg" alt="Norman-Borlaug">
             <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
         </figure>
-        <div id="tribute-info">
-            <h2>Here's a time line of Dr. Borlaug's life:</h2>
+        <section id="tribute-info">
+            <h3>Here's a time line of Dr. Borlaug's life:</h3>
             <ul>
                 <li><b>1914</b> - Born in Cresco, Iowa</li>
                 <li><b>1935</b> - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me."</li>
@@ -35,13 +35,15 @@
                 <li><b>2005</b> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
                 <li><b>2009</b> - dies at the age of 95.
                    "Borlaug's life and achievement are testimony</li>
-                <i>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect,   persistence and scientific 
-                    vision can make to human peace and progress."</i>
+             <blockquote>
+                <p>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect,   persistence and scientific 
+                    vision can make to human peace and progress."</p>
                  
-                <i>-- Indian Prime Minister Manmohan Singh</i>
-                <h4>If you have time, you should read more about this incredible human being on his<a id="tribute-link" target="_blank"href="https://en.wikipedia.org/wiki/Norman_Borlaug"> Wikipedia entry.<h4></h4>
+                <cite>-- Indian Prime Minister Manmohan Singh</cite>
+             </blockquote>
+                <h4>If you have time, you should read more about this incredible human being on his<a id="tribute-link" target="_blank"href="https://en.wikipedia.org/wiki/Norman_Borlaug"> Wikipedia entry.</h4>
             </ul>
-        </div>
+        </section>
     </main>
 </body>
 </html>
