--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="main">
-        <h1 class="title">Dr. Norman Borlaug</h1>
-        <p><strong>The man who saved a billion lives</strong></p>
-        <figure class="img-div">
-            <img id="image" src="norman-borlaug.jpeg" alt="Norman-Borlaug">
+    <main id="main">
+        <h1 id="title">Dr. Norman Borlaug</h1>
+        <p>The man who saved a billion lives</p>
+        <div id="img-div">
+            <img id="image" src="tribute-page-main-image.jpg" alt="Norman-Borlaug">
             <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
-        </figure>
-        <section id="tribute-info">
+        </div>
+        <div id="tribute-info">
             <h3>Here's a time line of Dr. Borlaug's life:</h3>
             <ul>
                 <li><b>1914</b> - Born in Cresco, Iowa</li>
@@ -35,16 +35,19 @@
                 <li><b>2005</b> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
                 <li><b>2009</b> - dies at the age of 95.
                    "Borlaug's life and achievement are testimony</li>
+                   <br>
+                   <br>
+                    <i>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect,   persistence and scientific 
+                        vision can make to human peace and progress."</i>
+                     <br>
+                     <br>
+                    <i>-- Indian Prime Minister Manmohan Singh</i>
+                    
             </ul>
-             <blockquote>
-                <p>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect,   persistence and scientific 
-                    vision can make to human peace and progress."</p>
-                 
-                <cite>-- Indian Prime Minister Manmohan Singh</cite>
-             </blockquote>
-                <h4>If you have time, you should read more about this incredible human being on his</h4>
-                <a id="tribute-link" target="_blank"href="https://en.wikipedia.org/wiki/Norman_Borlaug"> Wikipedia entry.</a>
-        </section>
+        </div>
+                   <h4>If you have time, you should read more about this incredible human being on his.
+                    <a id="tribute-link" target="_blank"href="https://en.wikipedia.org/wiki/Norman_Borlaug"> Wikipedia entry.</a>
+                   </h4>
     </main>
 </body>
 </html>
